--- a/source/assets/stylesheets/scss/components/_search.scss
+++ b/source/assets/stylesheets/scss/components/_search.scss
@@ -90,8 +90,8 @@
 
   @media screen and (max-width: 768px) {
     &-content {
-      margin: 0;
-      width: 100%;
+      margin: 0 !important;
+      width: 100% !important;
       height: 100%;
       flex-wrap: wrap;
       box-shadow: none;
@@ -102,7 +102,7 @@
     }
 
     &-form {
-      &:after {
+      &:before, &:after {
         content: "";
       }
     }
